# src/v1/routes/words.routes.js
@@ -4,6 +4,5 @@ import * as wordsController from '../controllers/words.controller.js';
 const router = express.Router();
 
 router.get('/', wordsController.list);
-router.get('/:id', wordsController.getById);
 
 export default router;
